# CMakeProjectDemo

./: CMakeLists.txt  CMakeSettings.json  README.md
CMakeProjectDemo/: CMakeLists.txt  CMakeProjectDemo.cpp
calc/: CMakeLists.txt  calc.cpp  calc.h
electronics/: CMakeLists.txt  voltage.cpp  voltage.h
